syntax = "proto3";

import "google/protobuf/timestamp.proto";

package grpc;



message CurrentRepositoryMetadataRequest {}
message CurrentRepositoryMetadataResponse {
  string id = 1;
  string name = 2;
}

message Repository {
    string repo_id = 1;
    int32 last_file_index = 2;
    int32 last_blob_index = 3;
    int32 last_name_index = 4;
}

message File {
    string uuid = 1;
    string path = 2;
    optional string blob_id = 3;
    google.protobuf.Timestamp valid_from = 4;
}

message Blob {
    string uuid = 1;
    string repo_id = 2;
    string blob_id = 3;
    int64 blob_size = 4;
    bool has_blob = 5;
    optional string path = 6;
    google.protobuf.Timestamp valid_from = 7;
}

message RepositoryName {
    string uuid = 1;
    string repo_id = 2;
    string name = 3;
    google.protobuf.Timestamp valid_from = 4;
}

message MergeRepositoriesResponse {}
message MergeFilesResponse {}
message MergeBlobsResponse {}
message MergeRepositoryNamesResponse {}

message UpdateLastIndicesRequest {}
message UpdateLastIndicesResponse {}

message LookupLastIndicesRequest {
    string repo_id = 1;
}
message LookupLastIndicesResponse {
    int32 file = 1;
    int32 blob = 2;
    int32 name = 3;
}

message SelectRepositoriesRequest {}
message SelectFilesRequest {
    int32 last_index = 1;
}
message SelectBlobsRequest {
    int32 last_index = 1;
}

message SelectRepositoryNamesRequest {
    int32 last_index = 1;
}

message RclonePathRequest {
    uint32 transfer_id = 1;
}
message RclonePathResponse {
    string path = 1;
}

message TransferItem {
    uint32 transfer_id = 1;
    string blob_id = 2;
    string path = 3;
}

message PrepareTransferResponse {
    uint64 count = 1;
}
message CreateTransferRequestRequest {
    uint32 transfer_id = 1;
    string repo_id = 2;
    repeated string paths = 3;
}
message CopiedTransferItem {
    uint32 transfer_id = 1;
    string path = 2;
}
message FinaliseTransferResponse {
    uint64 count = 1;
}

message FlightdeckMessageRequest {}

message FlightdeckData {
    string key = 1;
    oneof value {
        string string = 2;
        uint64 u64 = 3;
        double f64 = 5;
        bool bool = 4;
    }
}

message FlightdeckObservation {
    string type_key = 1;
    optional string id = 2;
    google.protobuf.Timestamp timestamp = 3;
    bool is_terminal = 4;
    repeated FlightdeckData data = 5;
}

message FlightdeckMessage {
    string level = 1;
    FlightdeckObservation observation = 2;
}

service Grpc {
  rpc CurrentRepositoryMetadata (CurrentRepositoryMetadataRequest) returns (CurrentRepositoryMetadataResponse);
  rpc MergeRepositories (stream Repository) returns (MergeRepositoriesResponse);
  rpc MergeFiles (stream File) returns (MergeFilesResponse);
  rpc MergeBlobs (stream Blob) returns (MergeBlobsResponse);
  rpc MergeRepositoryNames (stream RepositoryName) returns (MergeRepositoryNamesResponse);
  rpc UpdateLastIndices (UpdateLastIndicesRequest) returns (UpdateLastIndicesResponse);

  rpc LookupLastIndices (LookupLastIndicesRequest) returns (LookupLastIndicesResponse);
  rpc SelectRepositories (SelectRepositoriesRequest) returns (stream Repository);
  rpc SelectFiles (SelectFilesRequest) returns (stream File);
  rpc SelectBlobs (SelectBlobsRequest) returns (stream Blob);
  rpc SelectRepositoryNames (SelectRepositoryNamesRequest) returns (stream RepositoryName);

  rpc RclonePath(RclonePathRequest) returns (RclonePathResponse);
  rpc PrepareTransfer(stream TransferItem) returns (PrepareTransferResponse);
  rpc CreateTransferRequest(CreateTransferRequestRequest) returns (stream TransferItem);
  rpc FinaliseTransfer(stream CopiedTransferItem) returns (FinaliseTransferResponse);

  rpc FlightdeckMessages(FlightdeckMessageRequest) returns (stream FlightdeckMessage);
}